fix login/signup alignment, fix inobx/album text

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -2,8 +2,8 @@
   <!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
   <ion-content>
 
-      <!-- <div class="loginTitle" class="animated infinite bounce">Ripple</div> -->
-      <div class="animated bounceInDown loginTitle">Ripple</div>
+    <!-- <div class="loginTitle" class="animated infinite bounce">Ripple</div> -->
+    <div class="animated bounceInDown loginTitle">Ripple</div>
     <div class="ionic login">
       <div class="hero no-header flat">
         <div class="content">
@@ -21,23 +21,21 @@
           <span class="input-label">PASSWORD</span>
           <input class="clear-bg" type="password" ng-model="vm.data.password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;">
         </label>
-        <div class="">
-          <button class="button button-block button-positive" ng-click="vm.login()">Sign In</button>
-            </div>
-        <div class="row">
-          <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign in with Facebook</button>
-        </div>
       </div>
     </div>
 
   </ion-content>
-    <div class="row loginspinner">
-      <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
-    </div>
-    <div class="row signup">
+  <div class="row loginspinner">
+  </div>
+  <div class="row signup">
+    <ion-spinner ng-show="vm.spinner" icon="ripple"></ion-spinner>
+    <button class="button button-block button-positive" ng-click="vm.login()">Sign In</button>
+    <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign in with Facebook</button>
+    <div class="row">
       <a class="signup" href="#/signup"><span class="account">DON'T HAVE AN ACCOUNT?</span> <span class="signup">SIGN UP</span></a>
     </div>
+  </div>
 </ion-view>
 
-      <!--   <button style="width:50%" class="button button&#45;small button&#45;clear button&#45;flat waves&#45;effect waves&#45;button waves&#45;light">Google+</button> -->
-      <!--   <button style="width:45%" class="button button&#45;small button&#45;clear button&#45;flat waves&#45;effect waves&#45;button waves&#45;light">Facebook</button> -->
+<!--   <button style="width:50%" class="button button&#45;small button&#45;clear button&#45;flat waves&#45;effect waves&#45;button waves&#45;light">Google+</button> -->
+<!--   <button style="width:45%" class="button button&#45;small button&#45;clear button&#45;flat waves&#45;effect waves&#45;button waves&#45;light">Facebook</button> -->
