--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -9,9 +9,9 @@
               <div class="thumb" style="background-image: url({{photo.url}})" ng-click="vm.openModal(photo)"></div>
             </div>
             <div class="col ripplecard">
+                <p class="ripple-font">{{photo.caption}}</p>
+                <p class="ripple-font">Ripple ID: {{photo.photoId}}</p>
               <div class="row ripplecardinfo">
-                <p>{{photo.caption}}</p>
-                <p>Ripple ID: {{photo.photoId}}</p>
               </div>
               <div class="ripplecardinfobuttons">
                 <button class="button button-clear flat icon ion-ios-trash-outline" ng-click="vm.deleteFromAlbum(photo)"></button>
