--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -27,7 +27,7 @@
   </ion-content>
   <div class="row loginspinner">
   </div>
-  <div class="row signup">
+  <div class="row signup padding">
     <ion-spinner ng-show="vm.spinner" icon="ripple"></ion-spinner>
     <button class="button button-block button-positive" ng-click="vm.login()">Sign In</button>
     <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign in with Facebook</button>
