--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -21,7 +21,7 @@
       </label>
     </div>
   </ion-content>
-  <div class="row signup">
+  <div class="row signup padding">
     <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
     <button class="button button-block button-positive" ng-click="vm.signup()">Sign Up</button>
     <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign up with Facebook</button>
