--- a/shout/www/app/inbox/imgView.html
+++ b/shout/www/app/inbox/imgView.html
@@ -5,9 +5,16 @@
          <div class="modal" ng-click="vm.closeModal()">
               <ion-content>
 
+
+
                 <img src="{{vm.bigPhoto}}" style="display:block; width:100%; max-width:600px; margin:auto"/>
+        		<div class='modalCaption'>
+        		<p class="ripple-font">{{vm.caption}}</p>
+        		<div class="row ripplecardinfo">
+                <p class="ripple-font">Ripple ID: {{vm.photoId}}</p>
+                </div>
+        		</div>
                
-              </ion-content>
+
             </div>
-    </ion-content>
   </ion-modal-view>
