--- a/shout/www/app/album/imgView.html
+++ b/shout/www/app/album/imgView.html
@@ -7,8 +7,8 @@
 
                 <img src="{{vm.bigPhoto}}" style="display:block; width:100%; max-width:600px; margin:auto"/>
         		<div class='modalCaption'>
-        		<p class="ripple-font">{{vm.caption}}</p>
         		<div class="row ripplecardinfo">
+        		<p class="ripple-font">{{vm.caption}}</p><br />
                 <p class="ripple-font">Ripple ID: {{vm.photoId}}</p>
                 </div>
         		</div>
