--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -1,35 +1,43 @@
-<ion-view class="signupScreen" hide-nav-bar="true" view-title="Login" align-title="left">
-  <ion-content class="login">
+<ion-view class="loginScreen" hide-nav-bar="true" view-title="Login" align-title="left">
+  <ion-content>
     <div class="loginTitle">Ripple</div>
-    </div>
-    <div class="list padding">
-      <label class="item item-input item-stacked-label">
-        <i class="icon ion-ios-person-outline placeholder-icon"></i>
-        <span class="input-label">NAME</span>
-        <input class="clear-bg" type="text" placeholder="Enter Name" ng-model="vm.data.username">
-      </label>
-      <label class="item item-input item-stacked-label">
-        <i class="icon ion-ios-email-outline placeholder-icon"></i>
-        <span class="input-label">EMAIL</span>
-        <input class="clear-bg" type="email" placeholder="Enter Email" ng-model="vm.data.email">
-      </label>
-      <label class="item item-input item-stacked-label">
-        <i class="icon ion-ios-locked-outline placeholder-icon"></i>
-        <span class="input-label">PASSWORD</span>
-        <input class="clear-bg" type="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
-        ng-model="vm.data.password">
-      </label>
+    <div class="ionic login">
+      <div class="list padding">
+        <div class="hero no-header flat">
+          <div class="content">
+            <i class="ion-ios-color-filter-outline icon hero-icon clear-bg"></i>
+          </div>
+        </div>
+        <label class="item item-input item-stacked-label">
+          <i class="icon ion-ios-person-outline placeholder-icon"></i>
+          <span class="input-label">NAME</span>
+          <input class="clear-bg" type="text" placeholder="Enter Name" ng-model="vm.data.username">
+        </label>
+        <label class="item item-input item-stacked-label">
+          <i class="icon ion-ios-email-outline placeholder-icon"></i>
+          <span class="input-label">EMAIL</span>
+          <input class="clear-bg" type="email" placeholder="Enter Email" ng-model="vm.data.email">
+        </label>
+        <label class="item item-input item-stacked-label">
+          <i class="icon ion-ios-locked-outline placeholder-icon"></i>
+          <span class="input-label">PASSWORD</span>
+          <input class="clear-bg" type="password" ng-model="vm.data.password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;">
+        </label>
+        <div class="padding">
+          <div class="row">
+            <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
+          </div>
+          <div class="row">
+            <button class="button button-block button-positive" ng-click="vm.signup()">Sign Up</button>
+          </div>
+          <div class="row">
+            <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign up with Facebook</button>
+          </div>
+          <div class="row">
+            <a class="signup" href="#/login"><span class="account">ALREADY HAVE AN ACCOUNT?</span> <span class="signup">SIGN IN</span></a>
+          </div>
+        </div>
+      </div>
     </div>
   </ion-content>
-  <div class="row signup padding">
-    <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
-    <button class="button button-block button-positive" ng-click="vm.signup()">Sign Up</button>
-    <button class="button button-clear facebook" ng-click="vm.fbLogin()">Sign up with Facebook</button>
-    <a class="signup" href="#/login"><span class="account">ALREADY HAVE AN ACCOUNT?</span> <span class="signup">SIGN IN</span></a>
-  </div>
 </ion-view>
-
-<!-- <div class="button&#45;bar"> -->
-<!--   <button class="button button&#45;small button&#45;outline button&#45;assertive light&#45;bg icon&#45;left ion&#45;social&#45;google waves&#45;effect waves&#45;button waves&#45;light">Google+</button> -->
-<!--   <button class="button button&#45;small button&#45;outline button&#45;positive light&#45;bg icon&#45;left ion&#45;social&#45;facebook waves&#45;effect waves&#45;button waves&#45;light">Facebook</button> -->
-<!-- </div> -->
