--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -8,15 +8,15 @@
               <div class="thumb" style="background-image: url({{photo.url}})" ng-click="vm.openModal(photo)"></div>
             </div>
             <div class="col ripplecard">
-                <p class="ripple-font">{{photo.caption}}</p>
+              <p class="ripple-font">{{photo.caption}}</p>
               <div class="row ripplecardinfo">
-                <p class="ripple-font">Ripple ID: {{photo.photoId}}</p>
+                <!-- <p class="ripple&#45;font">Ripple ID: {{photo.photoId}}</p> -->
                 <p class="ripple-font">{{photo.timeRemaining | date : "m:ss"}}</p>
               </div>
-              <div class="ripplecardinfobuttons">
-                <button class="button button-clear flat icon ion-ios-trash-outline" ng-click="vm.deleteFromInbox(photo)"></button>
-                <button class="button button-clear flat icon ion-ios-book-outline" ng-click="vm.saveToAlbum(photo)"></button>
-                <button class="button button-clear flat icon ion-ios-world-outline" ng-click="vm.reBroadCast(photo)" ng-disabled="vm.isDisabled[photo.photoId]"></button>
+              <div class="ripplecardbuttons">
+                <i class="ion-ios-trash-outline" ng-click="vm.deleteFromInbox(photo)"></i>
+                <i class="ion-ios-book-outline" ng-click="vm.saveToAlbum(photo)"></i>
+                <i class="ion-ios-world-outline" ng-click="vm.reBroadCast(photo)" ng-disabled="vm.isDisabled[photo.photoId]"></i>
               </div>
             </div>
           </div>
