--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -18,7 +18,7 @@
   <script src="lib/ionic-material/dist/ionic.material.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
-  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
   <script src="cordova.js"></script>
 
   <!-- source js -->
