--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -2,7 +2,7 @@
   <ion-content class="no-padding">
     <!-- <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher> -->
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item ng-repeat="photo in vm.album">
+      <ion-item collection-repeat="photo in vm.album track by $index">
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
