--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
-              <div class="thumb" style="background-image: url({{photo.url}})" ng-click="vm.openModal(photo)"></div>
+              <div class="thumb" style="background-image: url({{photo.thumb}})" ng-click="vm.openModal(photo)"></div>
             </div>
             <div class="col ripplecard">
                 <p class="ripple-font">{{photo.caption}}</p>
