catch errors.  fix ui for cards.

--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Album">
   <ion-content class="no-padding">
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item collection-repeat="photo in vm.album track by $index">
+      <ion-item collection-repeat="photo in vm.album track by $index" item-width="100%">
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
