--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Inbox">
   <ion-content class="no-padding">
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item collection-repeat="photo in vm.inbox track by $index" item-width="100%">
+      <ion-item collection-repeat="photo in vm.inbox track by $index" item-width="100%" item-height="vm.getItemHeight()">
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
