disables album button on rebroadcast, adds screenshots to repo

--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -14,7 +14,7 @@
               </div>
               <div class="ripplecardbuttons">
                 <button class="ripplecardbuttons ion-ios-trash-outline" ng-click="vm.deleteFromInbox(photo)"></button>
-                <button class="ripplecardbuttons ion-ios-book-outline" ng-click="vm.saveToAlbum(photo)"></button>
+                <button class="ripplecardbuttons ion-ios-book-outline" ng-click="vm.saveToAlbum(photo)" ng-disabled="vm.isDisabled[photo.photoId]"></button>
                 <button class="ripplecardbuttons ion-ios-world-outline" ng-click="vm.reBroadCast(photo)" ng-disabled="vm.isDisabled[photo.photoId]"></button>
               </div>
             </div>
