all inbox and album buttons have feedback

--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -10,7 +10,7 @@
             <div class="col ripplecard">
                 <p class="ripple-font">{{photo.caption}}</p>
               <div class="ripplecardbuttons">
-                <i class="ion-ios-trash-outline" ng-click="vm.deleteFromAlbum(photo)"></i>
+                <button class="ripplecardbuttons ion-ios-trash-outline" ng-click="vm.deleteFromAlbum(photo)"></i>
               </div>
             </div>
           </div>
