--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Settings">
+  <button id="ripple-fab" class="button button-fab button-balanced icon ion-ios-camera" ng-click="vm.takePhoto()"></button>
   <ion-content class="padding">
     <ion-list>
 
