--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -2,7 +2,7 @@
   <button id="ripple-fab" class="button button-fab button-balanced icon ion-ios-camera" ng-click="vm.takePhoto()"></button>
   <ion-content class="no-padding">
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item collection-repeat="photo in vm.album track by $index" item-width="100%" item-height="vm.getItemHeight()">
+      <ion-item collection-repeat="photo in vm.album track by $index | reverse" item-width="100%" item-height="vm.getItemHeight()">
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
